workshop03/bggappv1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv1
  namespace: bggns
spec:
  selector:
    matchLabels:
      app: bggappv1
  template:
    metadata:
      labels:
        app: bggappv1
    spec:
      containers:
      - name: bggappv1
        image: stackupiss/bgg-backend:v1
        imagePullPolicy: IfNotPresent
        args: 
          - --prefix /v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: bggappv1-svc
  namespace: bggns
spec:
  type: NodePort
  selector:
    app: bggappv1
  ports:
  - port: 8080
    targetPort: 3000
